--- a/index.html
+++ b/index.html
@@ -1,40 +1,255 @@
-<div
-  style="
-    position: relative;
-    width: 100%;
-    height: 0;
-    padding-top: 56.2225%;
-    padding-bottom: 0;
-    box-shadow: 0 2px 8px 0 rgba(63, 69, 81, 0.16);
-    margin-top: 1.6em;
-    margin-bottom: 0.9em;
-    overflow: hidden;
-    border-radius: 8px;
-    will-change: transform;
-  "
->
-  <iframe
-    loading="lazy"
-    style="
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      top: 0;
-      left: 0;
-      border: none;
-      padding: 0;
-      margin: 0;
-    "
-    src="https://www.canva.com/design/DAGb_dfsJNQ/p8OS62dLRwwiAzxTUead6Q/view?embed"
-    allowfullscreen="allowfullscreen"
-    allow="fullscreen"
-  >
-  </iframe>
-</div>
-<a
-  href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAGb_dfsJNQ&#x2F;p8OS62dLRwwiAzxTUead6Q&#x2F;view?utm_content=DAGb_dfsJNQ&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link"
-  target="_blank"
-  rel="noopener"
-  >AOT AI Crypto Universe</a
->
-by Pavan Macharla
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>AOI Time: Nostalgia & Future</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <style>
+      body {
+        margin: 0;
+        font-family: "Orbitron", sans-serif;
+        background: linear-gradient(to bottom, #000428, #004e92);
+        color: #ffffff;
+        overflow-x: hidden;
+      }
+
+      header {
+        text-align: center;
+        padding: 50px 20px;
+        background: #0b132b;
+        color: #fff;
+        font-size: 2.5rem;
+        animation: fadeIn 2s;
+      }
+
+      section {
+        padding: 80px 20px;
+        text-align: center;
+      }
+
+      .intro {
+        animation: fadeIn 2s;
+      }
+
+      .content {
+        max-width: 800px;
+        margin: 0 auto;
+      }
+
+      .crypto-section {
+        background: linear-gradient(to bottom, #120136, #4e4a59);
+        padding: 60px 20px;
+        position: relative;
+        overflow: hidden;
+      }
+
+      .crypto-coin {
+        animation: spin 10s infinite linear;
+        margin: 20px auto;
+        width: 200px;
+        height: 200px;
+        background: radial-gradient(circle, #ffd700, #ffcc00);
+        border-radius: 50%;
+        box-shadow: 0 0 15px rgba(255, 255, 0, 0.5);
+      }
+
+      .btn {
+        display: inline-block;
+        padding: 15px 30px;
+        background: #1e3799;
+        color: #fff;
+        border: none;
+        border-radius: 5px;
+        text-transform: uppercase;
+        font-weight: bold;
+        cursor: pointer;
+        text-decoration: none;
+        transition: background 0.3s;
+      }
+
+      .btn:hover {
+        background: #4a69bd;
+      }
+
+      footer {
+        text-align: center;
+        padding: 20px;
+        background: #1b262c;
+        color: #ffffff;
+      }
+
+      .space-animations {
+        position: relative;
+        overflow: hidden;
+      }
+
+      .space-animations .star {
+        position: absolute;
+        width: 2px;
+        height: 2px;
+        background: #fff;
+        animation: move 10s infinite linear;
+      }
+
+      @keyframes fadeIn {
+        from {
+          opacity: 0;
+        }
+        to {
+          opacity: 1;
+        }
+      }
+
+      @keyframes spin {
+        from {
+          transform: rotate(0deg);
+        }
+        to {
+          transform: rotate(360deg);
+        }
+      }
+
+      @keyframes move {
+        from {
+          transform: translateY(0);
+        }
+        to {
+          transform: translateY(-200vh);
+        }
+      }
+
+      form {
+        max-width: 500px;
+        margin: 0 auto;
+        background: rgba(255, 255, 255, 0.1);
+        padding: 20px;
+        border-radius: 10px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+      }
+
+      form input,
+      form button {
+        width: calc(100% - 40px);
+        margin: 10px 20px;
+        padding: 10px;
+        font-size: 1rem;
+      }
+
+      form button {
+        background: #1e3799;
+        color: #fff;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        transition: background 0.3s;
+      }
+
+      form button:hover {
+        background: #4a69bd;
+      }
+
+      video {
+        width: 100%;
+        height: auto;
+        display: block;
+        margin: 20px auto;
+        border-radius: 10px;
+        overflow: hidden;
+      }
+    </style>
+  </head>
+  <body>
+    <header>AOI Time: Nostalgia Meets the Future</header>
+
+    <section class="intro">
+      <div class="content">
+        <h1>Welcome to AOI Time</h1>
+        <p>
+          Our AI Agent brings your nostalgic moments to life while forecasting
+          exciting futures. Join us on this journey through space and time!
+        </p>
+        <!-- <video autoplay loop muted>
+          <source src="/resources/video/vid1.mp4" type="video/mp4" />
+          Your browser does not support the video tag.
+        </video> -->
+
+        <img src="./resources/images/gif1.gif" alt="AOTIME" />
+      </div>
+    </section>
+
+    <section class="crypto-section">
+      <h2>Our Crypto Launch: The Hatching Phase</h2>
+      <div class="crypto-coin"></div>
+      <p>
+        Be part of the future! The new coins are hatching soon. Stay tuned for
+        the possibilities that lie ahead.
+      </p>
+
+      <form id="waitlistForm">
+        <h3>Join Our Waitlist</h3>
+        <input type="text" id="name" placeholder="Your Name" required />
+        <input type="email" id="email" placeholder="Your Email" required />
+        <button type="submit">Join Now</button>
+      </form>
+
+      <!-- <video autoplay loop muted>
+        <source src="/resources/video/vid1.mp4" type="video/mp4" />
+        Your browser does not support the video tag.
+      </video> -->
+
+      <img src="./resources/images/gif1.gif" alt="AOTIME" />
+    </section>
+
+    <section>
+      <h2>Connect with Us</h2>
+      <p>Follow our journey on these platforms:</p>
+      <a href="https://x.com/aotime918" class="btn" target="_blank">Twitter</a>
+      <a href="https://t.me/aotimecanchangefuture" class="btn" target="_blank"
+        >Telegram</a
+      >
+    </section>
+
+    <footer>&copy; 2025 AOI Time | Nostalgia and Future Predictions</footer>
+
+    <script>
+      document
+        .getElementById("waitlistForm")
+        .addEventListener("submit", function (e) {
+          e.preventDefault();
+          const name = document.getElementById("name").value;
+          const email = document.getElementById("email").value;
+
+          fetch("https://your-database-api-url.com/waitlist", {
+            method: "POST",
+            headers: {
+              "Content-Type": "application/json",
+            },
+            body: JSON.stringify({ name, email }),
+          })
+            .then((response) => response.json())
+            .then((data) => {
+              alert("Thank you for joining the waitlist!");
+            })
+            .catch((error) => {
+              console.error("Error:", error);
+              alert("Something went wrong. Please try again.");
+            });
+        });
+
+      // Add stars animation
+      const cryptoSection = document.querySelector(".crypto-section");
+      for (let i = 0; i < 50; i++) {
+        const star = document.createElement("div");
+        star.classList.add("star");
+        star.style.left = `${Math.random() * 100}%`;
+        star.style.top = `${Math.random() * 100}%`;
+        star.style.animationDuration = `${5 + Math.random() * 10}s`;
+        cryptoSection.appendChild(star);
+      }
+    </script>
+  </body>
+</html>
