--- a/index.html
+++ b/index.html
@@ -15,13 +15,22 @@
         <button id="notify-btn">Notify Me</button>
         <div class="social-icons">
           <a href="https://t.me/aotimecanchangefuture"
-            ><img src="./resources/icons/telegram-icon.png" alt="Telegram"
+            ><img
+              class="icons"
+              src="./resources/icons/telegram-icon.png"
+              alt="Telegram"
           /></a>
           <a href="https://discord.gg/QNSXFGJmPt"
-            ><img src="./resources/icons/discord-icon.png" alt="Discord"
+            ><img
+              class="icons"
+              src="./resources/icons/discord-icon.png"
+              alt="Discord"
           /></a>
           <a href="https://x.com/aotime918"
-            ><img src="./resources/icons/twitter-icon.png" alt="Twitter"
+            ><img
+              class="icons"
+              src="./resources/icons/twitter-icon.png"
+              alt="Twitter"
           /></a>
         </div>
       </div>
