--- a/index.html
+++ b/index.html
@@ -3,7 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Launching Soon</title>
+    <title>AOTIME</title>
+    <link
+      rel="icon"
+      type="image/png"
+      href="./resources/icons/favicon.png"
+      style="width: 2px; height: 2px"
+    />
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
