Update index.html hide higoun

--- a/index.html
+++ b/index.html
@@ -230,13 +230,19 @@
           width="100%"
           style="height: 500px; border: none"
         ></iframe> -->
-
-        <iframe
-          src="https://www.chatbase.co/chatbot-iframe/Fc1awckFoGxvmXUW-DiIl"
-          width="100%"
-          style="height: 500px; border: none"
-          id="iframe"
-        ></iframe>
+        <div style="width: 500px; height: 500px; overflow: hidden">
+          <iframe
+            src="https://www.chatbase.co/chatbot-iframe/Fc1awckFoGxvmXUW-DiIl"
+            width="100%"
+            style="
+              height: 500px;
+              border: none;
+              position: relative;
+              bottom: -2.5rem;
+            "
+            id="iframe"
+          ></iframe>
+        </div>
         <button class="close-btn" id="closeChatbotPopup">Close</button>
         <!-- <button class="close-btn" id="test" onclick="test()">test</button> -->
       </div>
