Update index.html popup3

--- a/index.html
+++ b/index.html
@@ -80,7 +80,12 @@
 
       @media (max-width: 600px) {
         .popup {
-          width: 95%;
+          width: 80%;
+          max-width: 90%;
+        }
+
+        .popup2 {
+          width: 80%;
           max-width: 90%;
         }
       }
@@ -230,7 +235,7 @@
           width="100%"
           style="height: 500px; border: none"
         ></iframe> -->
-        <div style="width: 500px; height: 500px; overflow: hidden">
+        <div style="height: 500px; overflow: hidden">
           <iframe
             src="https://www.chatbase.co/chatbot-iframe/Fc1awckFoGxvmXUW-DiIl"
             width="100%"
