Update index.html up pop

--- a/index.html
+++ b/index.html
@@ -24,14 +24,6 @@
         z-index: 1000;
       }
 
-      iframe > footer {
-        display: none !important;
-      }
-
-      .group[data-theme="dark"] .group-data-\[theme\=dark\]\:text-zinc-400 {
-        display: none !important;
-      }
-
       /* Popup Box Styling with RGB Border */
       @keyframes rgb-border {
         0% {
@@ -190,7 +182,7 @@
               src="./resources/icons/discord-icon.png"
               alt="Discord"
           /></a>
-          <a href="https://x.com/aotime918"
+          <a href="https://x.com/aotimenetwork"
             ><img
               class="icons"
               src="./resources/icons/twitter-icon.png"
